--- a/css/style.css
+++ b/css/style.css
@@ -137,5 +137,108 @@ body{
 
 #contact{
     color:white;
-    
+    text-align: center;
+}
+#contact > a{
+    color:rgb(230, 223, 130);
+    text-decoration: none;
+}
+
+#contact > a:hover{
+    color: white;
+}
+
+#backtotop{
+    text-align: center;
+    color: white;
+    opacity: .7;
+}
+
+#backtotop:hover{
+    animation: textfadein .5s forwards;
+}
+
+@keyframes textfadein{
+    0%{
+        color: white;
+        opacity:.7;
+    }
+    100%{
+        color: white;
+        opacity:1;
+    }
+}
+
+// projects page
+
+#projectblock{
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 100%;
+}
+
+#project{
+    padding-top: 4%;
+    color: white;
+    text-align: center;
+}
+
+.projects-title{
+    display: flex;
+    margin-left:15px;
+    padding: 10px 0;
+    color: white;
+    flex-direction: row;
+    align-items: baseline;
+}
+
+.project-date{
+    position: absolute;
+    right: 70px;
+}
+
+.projects{
+    display: flex;
+    margin-left:15px;
+    color: white;
+    flex-direction: row;
+    align-items: flex-start;
+    align-content: flex-start;
+}
+.project-img {
+    width: 50%;
+}
+.project-img > img{
+    width: 100%;
+}
+.project-text{
+    width: 50%;
+    padding: 0 120px 0 40px;
+}
+
+.proj-hover{
+    padding: 10px 0 30px 0;
+}
+.proj-hover:hover{
+    background: linear-gradient(86deg, #080808, #080808, #8a89c0);
+    background-size: 160% 160%;
+
+    -webkit-animation: AnimationName 2s ease forwards;
+    -moz-animation: AnimationName 2s ease forwards;
+    animation: AnimationName 2s ease forwards;
+}
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:5% 0%}
+    100%{background-position:76% 100%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:5% 0%}
+    100%{background-position:76% 100%}
+}
+@keyframes AnimationName {
+    0%{background-position:5% 0%}
+    100%{background-position:76% 100%}
 }
