--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,15 @@ body{
     font-size: 18px;
 }
 
+#nav-bar-nofix{
+    background-color: transparent;
+    padding: 10px 15px;
+    width: 100%;
+    z-index: 1000;
+
+    font-size: 18px;
+}
+
 #nav-bar:hover{
     animation: darken-nav .5s forwards;
 }
@@ -246,4 +255,25 @@ body{
 @keyframes AnimationName {
     0%{background-position:5% 0%}
     100%{background-position:76% 100%}
+}
+#experience-block{
+    color: white;
+    margin: 60px 350px 50px;
+}
+
+#involvement-block{
+    color: white;
+    margin: 30px 350px;
+}
+
+.title-indent{
+    margin-left:3em;
+}
+
+.title-indent .colortext{
+    margin-left: -1.4em;
+}
+
+.text-indent{
+    margin-left: 6em;
 }
