--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,8 @@ body{
     align-items: center;
 
     width: 100%;
+    font-size: xx-large;
+    
 }
 
 #about{
@@ -124,6 +126,7 @@ body{
     top: -70px;
     margin-bottom: 1%;
     /* background-color: rgb(196, 178, 120); */
+    font-weight: bold;
 }
 
 #about-text {
@@ -133,6 +136,7 @@ body{
     /* background-color: rgb(196, 178, 120); */
     padding: 5% 7%;
     margin-bottom: 4%;
+    font-size: 70%;
 }
 .colortext{
     color: rgb(230, 223, 130);
@@ -186,12 +190,14 @@ body{
 
     width: 80%;
     margin: 0 10%;
+    font-size: xx-large;
 }
 
 #project{
     padding-top: 4%;
     color: white;
     text-align: center;
+    font-weight: bold;
 }
 
 .projects-title{
@@ -201,6 +207,8 @@ body{
     color: white;
     flex-direction: row;
     align-items: baseline;
+    font-size: 100%;
+    font-weight: bold;
 }
 
 .project-date{
@@ -224,13 +232,13 @@ body{
 }
 .project-text{
     width: 50%;
-    padding: 0 120px 0 40px;
+    padding: 0 5% 0 3%;
+    font-size: 60%;
     
 }
-.project-text > h4{
-    line-height: 40px;
-    margin-bottom: 50px;
-    margin-right: -100px;
+
+.project-text > h5{
+    font-size: 1em;
 }
 
 .proj-hover{
@@ -261,24 +269,31 @@ body{
 
 #experience-block{
     color: white;
-    margin: 60px 350px 50px;
+    margin: 8% 23% 7%;
+    font-size: xx-large;
+    font-weight: bold;
 }
 
 #involvement-block{
     color: white;
-    margin: 30px 350px;
+    margin: 4% 23%;
+    font-size: xx-large;
+    font-weight: bold;
 }
 
 .title-indent{
     margin-left:3em;
+    font-size: 75%;
 }
 
 .title-indent .colortext{
-    margin-left: -1.4em;
+    margin-left: -2.6%;
 }
 
 .text-indent{
     margin-left: 6em;
+    font-size: 55%;
+    font-weight: normal;
 }
 
 #resume{
@@ -287,5 +302,5 @@ body{
 }
 
 #email{
-    padding-left: 10px;
+    padding-left: .7em;
 }
