--- a/css/style.css
+++ b/css/style.css
@@ -1,248 +1,351 @@
-body{
-    background-color: rgb(8,8,8) !important;
+body {
+  background-color: rgb(8, 8, 8) !important;
 }
-#body{
-    /* position:absolute; */
-    background-image: linear-gradient(rgb(8, 8, 8), black);
-    /* z-index: -5; */
-    padding: 50px 0;
+#body {
+  /* position:absolute; */
+  background-image: linear-gradient(rgb(8, 8, 8), black);
+  /* z-index: -5; */
+  padding: 50px 0;
 }
 
 /* nav bar */
-#nav-bar{
-    background-color: transparent;
-    position:fixed;
-    padding: 10px 15px;
-    width: 100%;
-    z-index: 1000;
-
+@media only screen and (min-width: 500px) {
+  #aboutme {
+    font-size: 2vw;
+  }
+  #nav-bar {
     font-size: 18px;
+  }
+  #nav-bar-nofix {
+    font-size: 18px;
+  }
+  #projectblock {
+    font-size: xx-large;
+  }
+  #experience-block {
+    font-size: xx-large;
+    margin: 8% 23% 7%;
+  }
+  #involvement-block {
+    font-size: xx-large;
+    margin: 4% 23%;
+  }
 }
 
-#nav-bar-nofix{
-    background-color: transparent;
-    padding: 10px 15px;
-    width: 100%;
-    z-index: 1000;
-
-    font-size: 18px;
+@media only screen and (max-width: 500px) and (min-width: 380px) {
+  #aboutme {
+    font-size: x-large;
+  }
+  #nav-bar {
+    font-size: medium;
+  }
+  #nav-bar-nofix {
+    font-size: medium;
+  }
+  #image-banner {
+    top: initial !important;
+  }
+  #image-banner > img {
+    height: initial !important;
+  }
+  #projectblock {
+    font-size: large;
+  }
+  #experience-block {
+    font-size: large;
+    margin: 8% 17% 7%;
+  }
+  #involvement-block {
+    font-size: large;
+    margin: 4% 17%;
+  }
 }
 
-#nav-bar:hover{
-    animation: darken-nav .5s forwards;
+@media only screen and (max-width: 379px) and (min-width: 350px) {
+  #aboutme {
+    font-size: large;
+  }
+  #nav-bar {
+    font-size: small;
+  }
+  #nav-bar-nofix {
+    font-size: small;
+  }
+  #image-banner {
+    top: initial !important;
+  }
+  #image-banner > img {
+    height: initial !important;
+  }
+  #projectblock {
+    font-size: large;
+  }
+  #experience-block {
+    font-size: large;
+    margin: 8% 17% 7%;
+  }
+  #involvement-block {
+    font-size: large;
+    margin: 4% 17%;
+  }
+}
+@media only screen and (max-width: 349px) {
+  #aboutme {
+    font-size: large;
+  }
+  #nav-bar {
+    font-size: x-small;
+  }
+  #nav-bar-nofix {
+    font-size: x-small;
+  }
+  #image-banner {
+    top: initial !important;
+  }
+  #image-banner > img {
+    height: initial !important;
+  }
+  #projectblock {
+    font-size: large;
+  }
+  #experience-block {
+    font-size: large;
+    margin: 8% 17% 7%;
+  }
+  #involvement-block {
+    font-size: large;
+    margin: 4% 17%;
+  }
+}
+
+#nav-bar {
+  background-color: transparent;
+  position: fixed;
+  padding: 10px 15px;
+  width: 100%;
+  z-index: 1000;
+  /* font-size: 1em; */
+}
+
+#nav-bar-nofix {
+  background-color: transparent;
+  padding: 10px 15px;
+  width: 100%;
+  z-index: 1000;
+  /* font-size :1.13em; */
+}
+
+#nav-bar:hover {
+  animation: darken-nav 0.5s forwards;
 }
 
 @keyframes darken-nav {
-    0%{
-        background-color: transparent;
-    }
-    100%{
-        background-color: rgba(0, 0, 0, 0.3);
-    }
+  0% {
+    background-color: transparent;
+  }
+  100% {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
 }
 
-#nav{
-    display: inline-flex;
-    list-style: none;
-    justify-content: flex-end;
+#nav {
+  display: inline-flex;
+  list-style: none;
+  justify-content: flex-end;
 
-    margin: 0 0;
-    width: 100%;
-    padding-right: 2%;
+  margin: 0 0;
+  width: 100%;
+  padding-right: 2%;
 }
 
-#nav-name{
-    position: absolute;
-    float: left;
-    
+#nav-name {
+  position: absolute;
+  float: left;
 }
 
-#nav-name > a{
-    color: white;
-    text-decoration: none;
+#nav-name > a {
+  color: white;
+  text-decoration: none;
 
-    font-weight: bold;
+  font-weight: bold;
 }
 
 #nav > li {
-    padding-left: 2%;
+  padding-left: 2%;
 }
 
 #nav > li > a {
+  color: gainsboro;
+  text-decoration: none;
+
+  padding: 5% 12% 7%;
+  white-space: nowrap;
+}
+
+#nav > li > a:hover {
+  border-radius: 6px;
+  animation: fadein 0.5s forwards;
+}
+
+@keyframes fadein {
+  0% {
+    background-color: transparent;
     color: gainsboro;
-    text-decoration: none;
-
-    padding: 5% 12% 7%;
-    white-space: nowrap;
-}
-
-#nav >li>a:hover{
-    
-    border-radius:6px;
-    animation: fadein .5s forwards;
-}
-
-@keyframes fadein{
-    0%{
-        background-color: transparent;
-        color: gainsboro;
-    }
-    100%{
-        color: white;
-        background-color: cornflowerblue; 
-    }
+  }
+  100% {
+    color: white;
+    background-color: cornflowerblue;
+  }
 }
 
 /* image banner */
 #image-banner {
-    position: relative;
-    
-    top: -115px;
-    overflow: hidden;
-    z-index: -1;
+  position: relative;
+
+  top: -115px;
+  overflow: hidden;
+  z-index: -1;
+  margin-bottom: 10px;
 }
 
 #image-banner > img {
-    width: 100%;
-    height: 830px;
+  width: 100%;
+  height: 120vh;
 }
-
 
 /* about */
 
-#aboutme{
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
+#aboutme {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
 
-    width: 100%;
-    font-size: xx-large;
-    
+  width: 100%;
+  /* font-size: xx-large; */
+  /* font-size: 2vw; */
 }
 
-#about{
-    text-align: center;
-    color: white;
-    top: -70px;
-    margin-bottom: 1%;
-    /* background-color: rgb(196, 178, 120); */
-    font-weight: bold;
+#about {
+  text-align: center;
+  color: white;
+  top: -70px;
+  margin-bottom: 1%;
+  /* background-color: rgb(196, 178, 120); */
+  font-weight: bold;
 }
 
 #about-text {
+  color: white;
+
+  width: 70%;
+  /* background-color: rgb(196, 178, 120); */
+  padding: 5% 7%;
+  margin-bottom: 4%;
+  font-size: 70%;
+}
+.colortext {
+  color: rgb(230, 223, 130);
+  padding-left: 2.5%;
+  width: 95%;
+}
+
+.code {
+  color: cornflowerblue;
+}
+
+#contact {
+  color: white;
+  text-align: center;
+}
+#contact > a {
+  color: rgb(230, 223, 130);
+  text-decoration: none;
+}
+
+#contact > a:hover {
+  color: white;
+}
+
+#backtotop {
+  text-align: center;
+  color: white;
+  opacity: 0.7;
+}
+
+#backtotop:hover {
+  animation: textfadein 0.5s forwards;
+}
+
+@keyframes textfadein {
+  0% {
     color: white;
-    
-    width: 70%;
-    /* background-color: rgb(196, 178, 120); */
-    padding: 5% 7%;
-    margin-bottom: 4%;
-    font-size: 70%;
-}
-.colortext{
-    color: rgb(230, 223, 130);
-    padding-left: 2.5%;
-    width: 95%;
-    
-}
-
-.code{
-    color: cornflowerblue;
-}
-
-#contact{
-    color:white;
-    text-align: center;
-}
-#contact > a{
-    color:rgb(230, 223, 130);
-    text-decoration: none;
-}
-
-#contact > a:hover{
+    opacity: 0.7;
+  }
+  100% {
     color: white;
+    opacity: 1;
+  }
 }
 
-#backtotop{
-    text-align: center;
-    color: white;
-    opacity: .7;
+#projectblock {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 80%;
+  margin: 0 10%;
+  /* font-size: xx-large; */
 }
 
-#backtotop:hover{
-    animation: textfadein .5s forwards;
+#project {
+  padding-top: 4%;
+  color: white;
+  text-align: center;
+  font-weight: bold;
 }
 
-@keyframes textfadein{
-    0%{
-        color: white;
-        opacity:.7;
-    }
-    100%{
-        color: white;
-        opacity:1;
-    }
+.projects-title {
+  display: flex;
+  margin-left: 15px;
+  padding: 10px 0;
+  color: white;
+  flex-direction: row;
+  align-items: baseline;
+  font-size: 100%;
+  font-weight: bold;
 }
 
-#projectblock{
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
-
-    width: 80%;
-    margin: 0 10%;
-    font-size: xx-large;
+.project-date {
+  position: absolute;
+  right: 10%;
 }
 
-#project{
-    padding-top: 4%;
-    color: white;
-    text-align: center;
-    font-weight: bold;
-}
-
-.projects-title{
-    display: flex;
-    margin-left:15px;
-    padding: 10px 0;
-    color: white;
-    flex-direction: row;
-    align-items: baseline;
-    font-size: 100%;
-    font-weight: bold;
-}
-
-.project-date{
-    position: absolute;
-    right: 10%;
-}
-
-.projects{
-    display: flex;
-    margin-left:15px;
-    color: white;
-    flex-direction: row;
-    align-items: flex-start;
-    align-content: flex-start;
+.projects {
+  display: flex;
+  margin-left: 15px;
+  color: white;
+  flex-direction: row;
+  align-items: flex-start;
+  align-content: flex-start;
 }
 .project-img {
-    width: 50%;
+  width: 50%;
 }
-.project-img > img{
-    width: 100%;
+.project-img > img {
+  width: 100%;
 }
-.project-text{
-    width: 50%;
-    padding: 0 5% 0 3%;
-    font-size: 60%;
-    
-}
-
-.project-text > h5{
-    font-size: 1em;
+.project-text {
+  width: 50%;
+  padding: 0 5% 0 3%;
+  font-size: 60%;
 }
 
-.proj-hover{
-    padding: 10px 0 30px 0;
+.project-text > h5 {
+  font-size: 1em;
+}
+
+.proj-hover {
+  padding: 10px 0 30px 0;
 }
 /* .proj-hover:hover{
     background: linear-gradient(86deg, #080808, #080808, #8a89c0);
@@ -266,41 +369,38 @@ body{
     100%{background-position:76% 100%}
 } */
 
+#experience-block {
+  color: white;
 
-#experience-block{
-    color: white;
-    margin: 8% 23% 7%;
-    font-size: xx-large;
-    font-weight: bold;
+  font-weight: bold;
 }
 
-#involvement-block{
-    color: white;
-    margin: 4% 23%;
-    font-size: xx-large;
-    font-weight: bold;
+#involvement-block {
+  color: white;
+
+  font-weight: bold;
 }
 
-.title-indent{
-    margin-left:3em;
-    font-size: 75%;
+.title-indent {
+  margin-left: 3em;
+  font-size: 75%;
 }
 
-.title-indent .colortext{
-    margin-left: -2.6%;
+.title-indent .colortext {
+  margin-left: -2.6%;
 }
 
-.text-indent{
-    margin-left: 6em;
-    font-size: 55%;
-    font-weight: normal;
+.text-indent {
+  margin-left: 6em;
+  font-size: 55%;
+  font-weight: normal;
 }
 
-#resume{
-    text-align: center;
-    color: cornflowerblue;
+#resume {
+  text-align: center;
+  color: cornflowerblue;
 }
 
-#email{
-    padding-left: .7em;
+#email {
+  padding-left: 0.7em;
 }
